[FIX] align label field with tabs in distance dialog.

--- a/css/pbs_gantt.css
+++ b/css/pbs_gantt.css
@@ -183,3 +183,8 @@ form {
   bottom   : 40px;
   opacity  : 1;
 }
+
+.label_on_tab {
+  vertical-align: top;
+  padding-top: 11px; /* 2(border) + 9(padding) */
+}
